<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="hello">Hello World, TestDroidActivity!</string>
    <string name="app_name">TestDroid</string>
    <string name="appFrmWake">Wake</string>
    <string name="appFrmStandby">Standby</string>
    <string name="appFrmHibernate">Hibernate</string>
    <string name="appFrmAction">Action</string>
    <string name="appFrmComputer">Computer</string>
    <string name="appFrmAdd">Add</string>
    <string name="appFrmEdit">Edit</string>
    <string name="appFrmRemove">Remove</string>
    <string name="appFrmHostAddress">IP Address / Hostname</string>
    <string name="appFrmMacAddress">MAC Address</string>
    <string name="appFrmDisplayName">Display Name</string>
    <string name="appFrmHomeCoordinates">Home Coordinates</string>
    <string name="appFrmLatitude">Latitude</string>
    <string name="appFrmLongitude">Longitude</string>
    <string name="appFrmRadius">Radius\n(meters)</string>
    <string name="appFrmAuthentication">Authentication</string>
    <string name="appFrmUserid">User ID</string>
    <string name="appFrmPassword">Password</string>
    <string name="appFrmServer">Server</string>
    <string name="appFrmServerHint">www.example.com</string>
    <string name="appFrmAuthenticationTest">Test authentication</string>
    <string name="appFrmAuthenticationWaiting">waiting...</string>
    <string name="appFrmAuthenticationLogin">Save and Log In</string>
    <string name="appFrmAuthenticationSuccess">Success</string>
    <string name="appFrmAuthenticationTimeout">Timeout</string>
    <string name="appFrmAuthenticationBadServer">Bad server</string>
    <string name="appFrmAuthenticationBadLogin">Bad login</string>
    <string name="appFrmAuthenticationBadURI">Bad URI</string>
    <string name="appFrmAuthenticationBadGeneral">General fault</string>
    <string name="appFrmHomeRadiusHint">1 yard = 0.9144 meters</string>
    <string name="save">Save</string>
    <string name="currentCoordinates">Current Coordinates</string>

</resources>